--- a/src/app/backend/config/config/config-component.html
+++ b/src/app/backend/config/config/config-component.html
@@ -5,7 +5,7 @@
   </div>
 
   @if (!xSmallOrSmall()) {
-    <span class="text-lg"> Configuration </span>
+    <span class="text-xl font-bold"> CONFIGURATION ACTUELLE </span>
   }
 
   <div>
