--- a/src/app/backend/incoming-mail/incoming-external-mail-list/incoming-external-mail-list-impl/incoming-external-mail-list-impl-component.html
+++ b/src/app/backend/incoming-mail/incoming-external-mail-list/incoming-external-mail-list-impl/incoming-external-mail-list-impl-component.html
@@ -11,6 +11,8 @@
   }@else {
     <app-incoming-report-list-view-component (menuSelected)="onMenuSelected($event)" [mails]="mailService.page.items" [forReport]="false"></app-incoming-report-list-view-component>
   }
+}@else {
+  <app-information-component></app-information-component>
 }
 
 @if (mailService.page) {
