--- a/src/app/backend/layout-backend/layout-backend-component.html
+++ b/src/app/backend/layout-backend/layout-backend-component.html
@@ -82,7 +82,7 @@
         <mat-divider></mat-divider>
         <mat-expansion-panel [class.mat-elevation-z0]="true" dense>
           <mat-expansion-panel-header>
-            <mat-icon class="me-3" matListItemIcon>trending_down</mat-icon>&nbsp;Courries entrants
+            <mat-icon class="me-3" matListItemIcon>trending_down</mat-icon>&nbsp;Courriers entrants
           </mat-expansion-panel-header>
           <mat-nav-list dense>
             <mat-list-item (click)="drawer.toggle(!XSmallOrSmall)" routerLink="/mails/incoming/external">
