--- a/src/app/backend/documentType/document-type-edit-component/document-type-edit-component.html
+++ b/src/app/backend/documentType/document-type-edit-component/document-type-edit-component.html
@@ -11,7 +11,7 @@
   <form class="-mx-3 md:-mx-0" [formGroup]="form" (ngSubmit)="onSubmit()">
     <div class="w-full mt-1">
       <mat-form-field class="w-full">
-        <mat-label>Désignation de la direction</mat-label>
+        <mat-label>Désignation de type de document</mat-label>
         <input type="text" matInput formControlName="designation">
         @if (form.get('designation')?.hasError) {
           <mat-error> {{ getErrorDesignation() }} </mat-error>
@@ -19,7 +19,7 @@
       </mat-form-field>
 
       <mat-form-field class="w-full">
-        <mat-label>Acronyme de la direction</mat-label>
+        <mat-label>Acronyme de type de document</mat-label>
         <input type="text" matInput formControlName="acronym">
         @if (form.get('acronym')?.hasError) {
           <mat-error> {{ getErrorAcronym() }} </mat-error>
