--- a/src/app/backend/incoming-mail/incoming-external-mail-form/incoming-external-mail-impl-form/incoming-external-mail-impl-form-component.html
+++ b/src/app/backend/incoming-mail/incoming-external-mail-form/incoming-external-mail-impl-form/incoming-external-mail-impl-form-component.html
@@ -1,8 +1,8 @@
 <section
   class="flex items-center justify-between md:h-14 md:px-4 md:bg-gray-50 border-b border-b-gray-300 md:border-b-0">
-  <button mat-icon-button>
-    <mat-icon class="mat-18">arrow_back_ios</mat-icon>
-  </button>
+   <div class="flex gap-2">
+    <app-back-component></app-back-component>
+  </div>
 
   <span class="px-3 py-1 text-xs md:text-sm text-blue-600 bg-blue-100 rounded-full dark:bg-gray-800 dark:text-blue-400">
     CNSSAP
