--- a/src/app/backend/outgoing-mail/outgoing-internal-mail-list/outgoing-internal-mail-list-impl-component/outgoing-internal-mail-list-impl-component.html
+++ b/src/app/backend/outgoing-mail/outgoing-internal-mail-list/outgoing-internal-mail-list-impl-component/outgoing-internal-mail-list-impl-component.html
@@ -5,8 +5,10 @@
   <div class="flex items-center justify-center my-10">
     <mat-spinner></mat-spinner>
   </div>
-}@else {
+}@else if(mailService.page.totalItems > 0) {
   <app-outgoing-mail-grid-component (menuSelected)="onMenuSelected($event)" [mails]="mailService.page.items"></app-outgoing-mail-grid-component>
+}@else {
+  <app-information-component></app-information-component>
 }
 
 @if (mailService.page) {
