--- a/src/app/backend/report/incoming-report-list-view/incoming-report-list-view-component.html
+++ b/src/app/backend/report/incoming-report-list-view/incoming-report-list-view-component.html
@@ -98,16 +98,17 @@
 
                 <td class="px-4 py-4 text-sm whitespace-nowrap">
                   <div class="flex items-center text-center">
-                    {{ item.days }}
+                    {{ item.days_taken }}
                   </div>
                 </td>
 
                 <td class="px-4 py-4 text-sm whitespace-nowrap">
-                  <div class="w-48 h-1.5 bg-blue-200 overflow-hidden rounded-full">
-                    <div class="bg-blue-500 h-1.5 {{ item.status === 'aa' ? 'w-1/3' : item.status === 'sa' ? 'w-2/3' : item.status === 'dir' ? 'w-3/3' : 'w-full' }}">
-                    </div>
-                  </div>
-                </td>
+    <div class="w-48 h-1.5 bg-gray-200 overflow-hidden rounded-full">
+        <div class="bg-blue-500 h-1.5 transition-all duration-300"
+             [style.width]="getProgressBarPercentage(item.status)">
+        </div>
+    </div>
+</td>
 
                 <td class="px-4 py-4 text-sm whitespace-nowrap">
                   <button mat-icon-button mat-icon-button [matMenuTriggerFor]="mailMenu" [matMenuTriggerData]="{ item: item }">
